Fixed contrast

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -64,7 +64,7 @@
     }
 
     .navigation a {
-        color: var(--nav-font-color);
+        color: #ffffff;
         padding: 0.5rem 0.75rem;
         font-weight: 300;
         display: inline-block;
